--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /blog/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 auto: true
-pygments: false
+pygments: true
 
 
 # Themes are encouraged to use these universal variables 
